<resources>
    <string name="app_name">HAVIT</string>
    <string name="title_profile">Feed</string>
    <string name="title_camera">Camera</string>
    <string name="title_timeline">Timelines</string>
    <string name="login_name">Name</string>
    <string name="login_name_text_field">Name</string>
    <string name="login_submit_button">Get Started</string>
    <string name="title_habit">Create New</string>
    <string name="button_capture">Capture</string>
    <string name="add_habit_btn">Add New Havit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be greater than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_input_name">Name</string>
    <string name="title_new_habit">Create New</string>
    <string name="placeholder_description">Description</string>
    <string name="default_word_count">0</string>
    <string name="login_password_toggle">Toggle</string>
    <string name="instagram">Instagram</string>
    <string name="snapchat">Snapchat</string>
    <string name="tiktok">TikTok</string>
    <string name="get_started_text">HAVIT</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="title_store">Templates</string>
    <string name="email_address">email</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="logout">Log Out</string>
    <string name="update_profile">Update Profile Picture</string>
    <string name="update_username">Change Username</string>
    <string name="reset_password_icon">Reset Password Icon</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_profile">Change Profile</string>
</resources>