<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/navy"
    android:layout_gravity="bottom"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHARE"
        android:textSize="40sp"
        android:fontFamily="@font/major_mono_display"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_instagram"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            android:layout_margin="5dp"
            android:src="@drawable/instagram_logo"
            android:background="@color/transparent"
            android:contentDescription="@string/instagram"/>

        <ImageButton
            android:id="@+id/btn_snapchat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            android:layout_margin="5dp"
            android:src="@drawable/snapchat_logo"
            android:background="@color/transparent"
            android:contentDescription="@string/snapchat"/>

        <ImageButton
            android:id="@+id/btn_tiktok"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            android:layout_margin="5dp"
            android:src="@drawable/tiktok_logo"
            android:background="@color/transparent"
            android:contentDescription="@string/tiktok" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:text="Dismiss"
        android:textColor="@color/white"
        android:layout_marginTop="16dp" />

</LinearLayout>