<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/navy"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:src="@drawable/profile_picture" />

            <TextView
                android:id="@+id/user_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/profile_image"
                android:fontFamily="@font/major_mono_display"
                android:includeFontPadding="false"
                android:text="@string/login_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/user_id"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/questrial"
                android:hint="Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_full_name"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/profile_image"
                android:fontFamily="@font/questrial"
                android:includeFontPadding="false"
                android:text="@string/email_address"
                android:textColor="@color/white"
                android:textSize="14sp">

            </TextView>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/logout_button"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/navy"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/logout_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/logout_icon"
                        android:src="@drawable/ic_baseline_logout_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/logout_icon"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/questrial"
                        android:text="@string/logout"
                        android:textColor="@color/white"
                        android:textSize="15sp">

                    </TextView>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/reset_password_button"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/navy"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/reset_password_icon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:contentDescription="@string/reset_password_icon"
                        android:src="@drawable/ic_baseline_lock_reset_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/reset_password_icon"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/questrial"
                        android:text="@string/reset_password"
                        android:textColor="@color/white"
                        android:textSize="15sp">

                    </TextView>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-44dp"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/update_profile_button"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/navy"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/update_profile_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/update_profile"
                        android:src="@drawable/update_profile_picture"
                        app:tint="@color/white"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/update_profile_icon"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/questrial"
                        android:gravity="center"
                        android:text="@string/update_profile"
                        android:textColor="@color/white"
                        android:textSize="15sp">

                    </TextView>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/update_username_button"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/navy"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/update_username_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/update_username"
                        android:src="@drawable/edit_profile"
                        app:tint="@color/white"></ImageView>

                    <TextView
                        android:id="@+id/update_username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/update_username_icon"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/questrial"
                        android:text="@string/update_username"
                        android:textColor="@color/white"
                        android:textSize="15sp">

                    </TextView>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>